# libfaafo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  try-catch
examples/: CMakeLists.txt  basic_example.c  try-catch.c  union_example.c
include/: arraylist.h  bstrlib.h  commons.h  darray.h  dbg.h  defer.h  hashmap.h  library.h  linkedlist.h  list.h  ptr_deref.h  radixmap.h
src/: arraylist.c  commons.c  darray.c  hashmap.c  library.c  linkedlist.c  list.c  radixmap.c
tests/: CMakeLists.txt  arraylist_test.c  darray_test.c  hashmap_test.c  linkedlist_test.c  list_test.c  radixmap_test.c  string_test.c  test_library.c  testutil.c  testutil.h
